[gd_scene load_steps=2 format=3 uid="uid://tx0n7tcj711m"]

[ext_resource type="Script" path="res://scenes/gameplay/select_location_area.gd" id="1_a1x71"]

[node name="StartDialogArea" type="Area2D"]
script = ExtResource("1_a1x71")

[connection signal="input_event" from="." to="." method="_on_click"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
